crates/codira_codegen/src/snapshots/codira_codegen__test__compare_op_f32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn equals(a: f32, b: f32) -> bool { a == b }\n    pub fn not_equal(a: f32, b: f32) -> bool { a != b}\n    pub fn less(a: f32, b: f32) -> bool { a < b }\n    pub fn less_equal(a: f32, b: f32) -> bool { a <= b }\n    pub fn greater(a: f32, b: f32) -> bool { a > b }\n    pub fn greater_equal(a: f32, b: f32) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x i64*]

define i1 @equals(float %0, float %1) {
body:
  %eq = fcmp oeq float %0, %1
  ret i1 %eq
}

define i1 @not_equal(float %0, float %1) {
body:
  %neq = fcmp one float %0, %1
  ret i1 %neq
}

define i1 @less(float %0, float %1) {
body:
  %less = fcmp olt float %0, %1
  ret i1 %less
}

define i1 @less_equal(float %0, float %1) {
body:
  %lesseq = fcmp ole float %0, %1
  ret i1 %lesseq
}

define i1 @greater(float %0, float %1) {
body:
  %greater = fcmp ogt float %0, %1
  ret i1 %greater
}

define i1 @greater_equal(float %0, float %1) {
body:
  %greatereq = fcmp oge float %0, %1
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x i64*] zeroinitializer

