crates/codira_codegen/src/snapshots/codira_codegen__test__compare_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn equals(a: i32, b: i32) -> bool { a == b }\n    pub fn not_equal(a: i32, b: i32) -> bool { a != b}\n    pub fn less(a: i32, b: i32) -> bool { a < b }\n    pub fn less_equal(a: i32, b: i32) -> bool { a <= b }\n    pub fn greater(a: i32, b: i32) -> bool { a > b }\n    pub fn greater_equal(a: i32, b: i32) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x i64*]

define i1 @equals(i32 %0, i32 %1) {
body:
  %eq = icmp eq i32 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i32 %0, i32 %1) {
body:
  %neq = icmp ne i32 %0, %1
  ret i1 %neq
}

define i1 @less(i32 %0, i32 %1) {
body:
  %less = icmp slt i32 %0, %1
  ret i1 %less
}

define i1 @less_equal(i32 %0, i32 %1) {
body:
  %lesseq = icmp sle i32 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i32 %0, i32 %1) {
body:
  %greater = icmp sgt i32 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i32 %0, i32 %1) {
body:
  %greatereq = icmp sge i32 %0, %1
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x i64*] zeroinitializer

